<resources>
    <string name="app_name">ToDoList</string>
    <string name="logo">Logo</string>
    <string name="create_profile">Create profile to start your first ToDo List</string>
    <string name="create_account">Create Account</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_password">Your password</string>
    <string name="your_name">Your name</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login">login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account">Don't have an account</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="forget_your_password">Forget your password?</string>
</resources>