<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/create_profile"
        android:textColor="#B2FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="12dp"
        android:background="#2fff"
        android:hint="@string/your_name"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#6fff"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="12dp"
        android:background="#2fff"
        android:hint="@string/your_email_address"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#6fff"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="12dp"
        android:background="#2fff"
        android:hint="@string/your_password"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#6fff"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="22dp"
        android:text="@string/create_account" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="#72FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="22dp"
        android:text="@string/login"
        android:backgroundTint="#0000"
        />

</LinearLayout>
