<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    tools:ignore="UnusedAttribute">

    <TextView
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="#B2FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="12dp"
        android:background="#2fff"
        android:hint="@string/your_email_address"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#6fff"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="12dp"
        android:background="#2fff"
        android:hint="@string/your_password"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#6fff"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/buttonTextViewForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="22dp"
        android:textSize="14sp"
        android:textColor="#9fff"
        android:gravity="right"
        android:text="@string/forget_your_password"
        android:backgroundTint="@color/color_app"
         />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="22dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="#72FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/buttonTExtViewCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="22dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="6dp"
        android:text="@string/create_your_profile"
        />

</LinearLayout>